--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ yarn.lock
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+/gpc-web/node_modules
+/gpc-web/.DS_Store
+/gpc-web/dist
+/gpc-web/dist-ssr
+/gpc-web/*.local
