--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-#logback_version=1.2.1
-#ktor_version=1.5.2
-#kotlin.code.style=official
+org.gradle.caching=true
+org.gradle.logging.level=debug
+org.gradle.parallel=true
