--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^2.1.6",
     "vue": "^3.0.5"
   },
   "devDependencies": {
