mija-1 add ant-design-vue tbc... now is running but get all antd dodanie i18n

--- a/gpc-web/tsconfig.json
+++ b/gpc-web/tsconfig.json
@@ -12,8 +12,16 @@
     "types": ["vite/client"],
     "baseUrl": ".",
     "paths": {
-      "/@/*": ["src/*"]
+      "/@/*": ["src/*"],
+      "/#/*": ["types/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "types/**/*.d.ts",
+    "types/**/*.ts"
+  ]
 }
