--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -8,11 +8,26 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.1.6",
-    "vue": "^3.0.5"
+    "vue": "3.0.11",
+    "vue-i18n": "9.1.6"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.0",
+    "@types/crypto-js": "^4.0.1",
+    "@types/fs-extra": "^9.0.11",
+    "@types/inquirer": "^7.3.1",
+    "@types/lodash-es": "^4.17.4",
+    "@types/mockjs": "^1.0.3",
+    "@types/node": "^15.6.1",
+    "@types/nprogress": "^0.2.0",
+    "@types/qrcode": "^1.4.0",
+    "@types/qs": "^6.9.6",
+    "@types/sortablejs": "^1.10.6",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.11",
+    "lodash-es": "^4.17.21",
     "typescript": "^4.2.4",
     "vite": "^2.3.2",
     "vue-tsc": "^0.1.2"
