--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -30,6 +30,9 @@
     "lodash-es": "^4.17.21",
     "typescript": "^4.2.4",
     "vite": "^2.3.2",
-    "vue-tsc": "^0.1.2"
+    "vue-tsc": "^0.1.7"
+  },
+  "resolutions": {
+    "trim-newlines": "4.0.2"
   }
 }
