--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -6,9 +6,15 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://www.opensource.org/licenses/mit-license.php"
+    }
+  ],
   "dependencies": {
     "ant-design-vue": "^2.1.6",
-    "vue": "3.0.11",
+    "vue": "^3.2.11",
     "vue-i18n": "9.1.6"
   },
   "devDependencies": {
@@ -26,10 +32,10 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/compiler-sfc": "^3.2.11",
     "lodash-es": "^4.17.21",
     "typescript": "^4.2.4",
-    "vite": "^2.3.2",
+    "vite": "2.3.8",
     "vue-tsc": "^0.1.7"
   },
   "resolutions": {
