--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -13,30 +13,30 @@
     }
   ],
   "dependencies": {
-    "ant-design-vue": "^2.1.6",
-    "vue": "^3.2.11",
-    "vue-i18n": "9.1.6"
+    "ant-design-vue": "2.2.8",
+    "vue": "^3.2.19",
+    "vue-i18n": "^9.1.8"
   },
   "devDependencies": {
-    "@types/codemirror": "^5.60.0",
-    "@types/crypto-js": "^4.0.1",
-    "@types/fs-extra": "^9.0.11",
-    "@types/inquirer": "^7.3.1",
-    "@types/lodash-es": "^4.17.4",
+    "@types/codemirror": "^5.60.4",
+    "@types/crypto-js": "^4.0.2",
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.1.3",
+    "@types/lodash-es": "^4.17.5",
     "@types/mockjs": "^1.0.3",
-    "@types/node": "^15.6.1",
+    "@types/node": "^16.10.2",
     "@types/nprogress": "^0.2.0",
-    "@types/qrcode": "^1.4.0",
-    "@types/qs": "^6.9.6",
-    "@types/sortablejs": "^1.10.6",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.2.11",
+    "@types/qrcode": "^1.4.1",
+    "@types/qs": "^6.9.7",
+    "@types/sortablejs": "^1.10.7",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/compiler-sfc": "3.2.19",
     "lodash-es": "^4.17.21",
-    "typescript": "^4.2.4",
-    "vite": "2.3.8",
-    "vue-tsc": "^0.1.7"
+    "typescript": "^4.4.4",
+    "vite": "^2.6.7",
+    "vue-tsc": "^0.3.0"
   },
   "resolutions": {
     "trim-newlines": "^4.0.2",
