--- a/gpc-web/package.json
+++ b/gpc-web/package.json
@@ -35,7 +35,7 @@
     "@vue/compiler-sfc": "3.2.19",
     "lodash-es": "^4.17.21",
     "typescript": "^4.4.4",
-    "vite": "^2.6.7",
+    "vite": "2.6.10",
     "vue-tsc": "^0.3.0"
   },
   "resolutions": {
